<resources>
    <string name="app_name">Tittle-Tattle</string>

    <string name="facebook_app_id">4508518975843277</string>
    <string name="fb_login_protocol_scheme">fb4508518975843277</string>
    <string name="facebook_client_token">3c7ff058d30995da75d60506c56a8197</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Publish</string>
    <string name="title_notifications">Notifications</string>
    <string name="main_app_name">tittle-tattle</string>
    <string name="img_login_content_desc">Login image</string>
    <string name="home_img_content_desc">Home page image</string>
    <string name="main_activity_image">Main image</string>
    <string name="my_subscriptions">My subscriptions</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="subscribe">subscribe</string>
    <string name="unsubscribe">unsubscribe</string>

    <string name="area_of_activity">Area of activity</string>
    <string name="arts_entertainment">Arts &amp; Entertainment</string>
    <string name="drinks">Drinks</string>
    <string name="education">Education</string>
    <string name="food">Food</string>
    <string name="real_estates">Real estates</string>
    <string name="shopping">Shopping</string>
    <string name="sports">Sports</string>
    <string name="others">Others</string>
    <string name="topics">Topics</string>
    <string name="empty_rec">No subscriptions.</string>
    <string name="empty_image">Empty image</string>
    <string name="go_to_topics_for_more">For more, go to</string>
    <string name="message_hint">message</string>
    <string name="publish_btn">publish</string>
    <string name="no_topics_text1">You aren\'t subscribed to any </string>
    <string name="no_topics_text2">Subscriptions needed for publishing messages.</string>
    <string name="publish_image">Publish image</string>
    <string name="login_text">For a better user experience, please connect with your facebook account. We will work on offering other login options in the future.</string>
    <string name="gossip_text">because gossip always has the hottest information available</string>
    <string name="topics_in_text">topics</string>
    <string name="my_ads">My ads</string>

    <string-array name="categories_resources" translatable="false">
        <item>area_of_activity</item>
        <item>arts_entertainment</item>
        <item>drinks</item>
        <item>education</item>
        <item>food</item>
        <item>real_estates</item>
        <item>shopping</item>
        <item>sports</item>
        <item>others</item>
    </string-array>

    <string-array name="area_of_activity">
        <item>Arts</item>
        <item>Architecture</item>
        <item>Archeology</item>
        <item>Biology</item>
        <item>Business</item>
        <item>Chemistry</item>
        <item>Computer Science</item>
        <item>Economics</item>
        <item>Electrical engineering</item>
        <item>Finance &amp; banks</item>
        <item>Film</item>
        <item>Foreign languages</item>
        <item>Geography</item>
        <item>History</item>
        <item>Law</item>
        <item>Language &amp; literature</item>
        <item>Management</item>
        <item>Mathematics</item>
        <item>Medicine</item>
        <item>Music</item>
        <item>Pharmacology</item>
        <item>Philosophy</item>
        <item>Physics</item>
        <item>Politics</item>
        <item>Political relations</item>
        <item>Psychology</item>
        <item>Religion</item>
        <item>Sociology</item>
        <item>Theatre &amp; cinema</item>
        <item>Writing</item>
    </string-array>

    <string-array name="arts_entertainment">
        <item>Arcade</item>
        <item>Art gallery</item>
        <item>Cinema</item>
        <item>Comedy club</item>
        <item>Concerts</item>
        <item>Dance club &amp; nightclub</item>
        <item>Festivals</item>
        <item>Jazz &amp; blues club</item>
        <item>Museum</item>
        <item>Opera house</item>
        <item>Racing track</item>
        <item>Theatre</item>
        <item>Theme park</item>
        <item>Zoo</item>
    </string-array>

    <string-array name="drinks">
        <item>Beer garden</item>
        <item>Brewery</item>
        <item>Coffee shop</item>
        <item>Lounge</item>
        <item>Pub</item>
        <item>Smoothies &amp; juice bar</item>
        <item>Tea room</item>
        <item>Wine bar</item>
        <item>Winery</item>
    </string-array>

    <string-array name="education">
        <item>Conferences</item>
        <item>Courses</item>
        <item>High school</item>
        <item>Kindergarten</item>
        <item>Personal development</item>
        <item>Primary school</item>
        <item>Tutoring</item>
        <item>University</item>
    </string-array>

    <string-array name="real_estates">
        <item>Campsite</item>
        <item>Caravan park</item>
        <item>Flats</item>
        <item>Hostel</item>
        <item>Hotel</item>
        <item>Houses</item>
        <item>Lodge</item>
        <item>Rent</item>
    </string-array>

    <string-array name="food">
        <item>Bakery</item>
        <item>Brunch restaurant</item>
        <item>Cheese shop</item>
        <item>Chinese restaurant</item>
        <item>Dessert shop</item>
        <item>Farmer\'s market</item>
        <item>Fast food restaurant</item>
        <item>Gelato</item>
        <item>Indian restaurant</item>
        <item>Italian restaurant</item>
        <item>Lebanese restaurant</item>
        <item>Restaurant</item>
        <item>Sandwich shop</item>
        <item>Spanish restaurant</item>
        <item>Traditional restaurant</item>
    </string-array>

    <string-array name="others">
        <item>Announcements</item>
        <item>Warnings</item>
        <item>Traffic</item>
    </string-array>

    <string-array name="shopping">
        <item>Antiques shop</item>
        <item>Apparel &amp; clothing</item>
        <item>Beauty shop</item>
        <item>Book shop</item>
        <item>Boutique shop</item>
        <item>Electronics shop</item>
        <item>Film &amp; music shop</item>
        <item>Flea market</item>
        <item>Gift shop</item>
        <item>Home &amp; garden shop</item>
        <item>Newsagent</item>
        <item>Pawn shop</item>
        <item>Pet shop</item>
        <item>Second hand shop</item>
        <item>Shopping centre</item>
        <item>Souvenir shop</item>
        <item>Sporting goods shop</item>
        <item>Superstore</item>
        <item>Tobacco shop</item>
    </string-array>

    <string-array name="sports">
        <item>Baseball</item>
        <item>Basketball</item>
        <item>Bowling</item>
        <item>Boxing</item>
        <item>Dancing</item>
        <item>Fitness</item>
        <item>Football</item>
        <item>Gymnastics</item>
        <item>Golf</item>
        <item>Handball</item>
        <item>Hockey</item>
        <item>Ice skating</item>
        <item>Karting</item>
        <item>Paintball</item>
        <item>Races</item>
        <item>Rafting/ kayaking</item>
        <item>Rugby</item>
        <item>Ski</item>
        <item>Squash</item>
        <item>Swimming</item>
        <item>Tennis</item>
        <item>Yoga</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permissions">Permissions</string>
    <string name="are_not_granted">are not granted.</string>
    <string name="usage_of_location_all_the_time">(usage of location all the time)</string>
    <string name="no_notifications_image">No notifications image</string>
    <string name="notifications">Notifications</string>
    <string name="no_notifications">No notifications.</string>

</resources>